--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Espírito Bitcoin - Educação, Inovação e Adoção Blockchain no ES" />
     <meta property="og:description" content="Comunidade focada em educação e adoção de Bitcoin e tecnologias blockchain no Espírito Santo. Participe dos nossos eventos, workshops e meetups." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://espiritobtc.vercel.app/bpd2.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@espiritobitcoin" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://espiritobtc.vercel.app/bpd2.png" />
     
     <!-- SEO Tags -->
     <meta name="keywords" content="bitcoin vila velha, blockchain espírito santo, pizza day cripto, bitcoin es, criptomoedas, eventos bitcoin" />
